Fin de la création de la gestion des utilisateur

--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Hello ChatController!{% endblock %}
 
 {% block body %}
-<p>kjdlfghdfwlkg</p>
+<a href="{{ path('app_logout')}}">Ce déconecté</a>
+<a href="{{ path('acout_password')}}">Modifier sont mot de passe</a>
 
 {% endblock %}
