fin de la partie utilisateur

--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -3,11 +3,14 @@
 {% block title %}Inscrivez Vous{% endblock %}
 
 {% block body %}
+<div class="containerRegister">
+    <div class="formcontainerregister">
+        <h1>inscription</h1>
 
-<h1>inscription</h1>
+        {{ form(form) }}
+    </div>
 
-{{ form(form) }}
-
+</div>
 
 
 {% endblock %}
