--- a/templates/security/acoutPassword.html.twig
+++ b/templates/security/acoutPassword.html.twig
@@ -3,8 +3,18 @@
 {% block title %}Hello AcoutPasswordController!{% endblock %}
 
 {% block body %}
-<h1>Modiffier mon mot de passe</h1>
-    
-    {{ form(form) }}
-<a href="{{ path('chat')}}">Annuler</a>
+ <div class="contenaireAcount">
+    <div class="formAcount">
+    <h1>Modiffier mon mot de passe</h1>
+        {% if notification %}
+
+        <div class="alert ">
+            {{ notification }}
+        </div>
+        {% endif %}
+        {{ form(form) }}
+    <a class="submitChangePaswordRetrour" href="{{ path('chat')}}">Retourner sur le chat</a>
+
+    </div>
+ </div>
 {% endblock %}
