--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,6 @@
     </head>
     <body>
         {% block body %}{% endblock %}
-
+        <script src="{{ asset('assets/js/app.js')}}"></script>
     </body>
 </html>
