--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,32 +3,40 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
-
-    <h1 class="h3 mb-3 font-weight-normal">Merci de vous conecté</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Votre mot de passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
+<div class="containerLogin">
+    <div class="formulaireLogin">
+        <h1 class="titileLogin">Merci de vous conecté</h1>
     
+        <form class="formLogin" method="post">
+            {% if error %}
+                <div class="errorLogin">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        se connecté
-    </button>
-</form>
-<a href="{{ path('register')}}">Inscription</a>
+            {% if app.user %}
+                <div class="infoLogin">
+                    Vous êtes connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">déconnexion</a>
+                </div>
+            {% endif %}
+
+            <label for="inputEmail">Email</label>
+            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+            <label for="inputPassword">Votre mot de passe</label>
+            <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+
+            <input type="hidden" name="_csrf_token"
+                value="{{ csrf_token('authenticate') }}"
+            >
+
+            
+            <div class="butuomLogin">
+                <button class="conectionLogin" type="submit">
+                    se connecté
+                </button>
+                <p class="deconectionLogin">Si vous n'avez pas de conmpte utilisateur, merci de vous inscrire <a  href="{{ path('register')}}">Ici</a></p>
+                
+                </p>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
