--- a/templates/security/acoutPassword.html.twig
+++ b/templates/security/acoutPassword.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AcoutPasswordController!{% endblock %}
+{% block title %}Modifier votre Mot de passe !{% endblock %}
 
 {% block body %}
  <div class="contenaireAcount">
