--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -8,6 +8,11 @@
         <h1>inscription</h1>
 
         {{ form(form) }}
+        
+            
+            <a href="{{ path('app_login')}}" class="retourRegister">Retour</a>
+
+      
     </div>
 
 </div>
