--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15,14 +15,18 @@ body {
 
 a {
     font-family: 'Roboto', sans-serif;
+    color: #333;
+    font-size: 12px;
+    text-decoration: none;
+    font-weight: 600;
 }
 
 
 /*-------------- page home/login----------------------*/
 
 .containerLogin {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     position: relative;
     background: #fff;
     background-image: url(../img/sky.jpg);
@@ -33,7 +37,7 @@ a {
 
 .formulaireLogin {
     width: 700px;
-    height: 300px;
+    height: 310px;
     border-radius: 20px;
     position: absolute;
     top: 50%;
@@ -71,10 +75,9 @@ a {
 }
 
 .formLogin input {
-    height: 40px;
     border: none;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
-    padding-left: 10px;
+    padding: 10px;
 }
 
 .butuomLogin {
@@ -87,12 +90,75 @@ a {
     background-color: #fcc817;
     border: none;
     border-radius: 5px;
-    margin: 10px 5px;
+    margin: 20px 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
 
-.deconectionLogin {
+.registerLogin {
     font-size: 14px;
-    margin: 15px 5px;
+    margin: 25px 5px;
+}
+
+.registerLogin a {
+    text-decoration: underline;
+}
+
+.infoLogin {
+    margin-top: 10px;
+}
+
+.infoLogin a {
+    font-size: 12px;
+    text-decoration: none;
+    padding: 7px 20px;
+    text-align: center;
+    background-color: #fcc817;
+    border: none;
+    border-radius: 5px;
+    cursor: default;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+@media screen and (max-width: 980px) {
+    .formulaireLogin {
+        width: 100vw;
+        height: 80vh;
+    }
+    .titileLogin {
+        width: 100%;
+        height: 80px;
+        padding-top: 8px;
+        font-size: 6vw;
+    }
+    .formLogin {
+        width: 100%;
+    }
+    .formLogin input {
+        padding: 2vw;
+    }
+    .butuomLogin {
+        display: flex;
+        flex-direction: column;
+    }
+    .conectionLogin {
+        width: 100%;
+        height: 40px;
+        font-size: 4vw;
+    }
+    .registerLogin {
+        font-size: 3vw;
+        margin: 25px 5px;
+    }
+    .registerLogin a {
+        font-size: 3vw;
+    }
+    .infoLogin {
+        font-size: 3vw;
+    }
+    .infoLogin a {
+        font-size: 2.5vw;
+        display: inline-block;
+    }
 }
 
 
@@ -111,7 +177,7 @@ a {
 
 .formcontainerregister {
     width: 700px;
-    height: 660px;
+    height: 710px;
     border-radius: 20px;
     position: absolute;
     top: 50%;
@@ -137,21 +203,21 @@ a {
     margin: 0;
     padding: 0 20px;
     width: 700px;
-    height: 440px;
     display: flex;
     flex-direction: column;
     font-size: 20px;
+    overflow: initial;
 }
 
 .required {
-    display: block;
-    margin: 10px;
+    display: inline-block;
+    margin: 6.5px 10px;
+    font-size: 18px;
 }
 
 .inputRegister {
-    display: block;
     width: 100%;
-    height: 40px;
+    height: 30px;
     border: none;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
     padding-left: 10px;
@@ -163,7 +229,25 @@ a {
     background-color: #fcc817;
     border: none;
     border-radius: 5px;
-    margin: 10px 5px;
+    margin: 20px 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+.retourRegister {
+    width: 20%;
+    height: 30px;
+    font-size: 12px;
+    text-decoration: none;
+    padding: 8px 50px;
+    text-align: center;
+    background-color: #fcc817;
+    border: none;
+    border-radius: 5px;
+    position: relative;
+    bottom: 48px;
+    left: 200px;
+    cursor: default;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
 
 
@@ -182,7 +266,7 @@ a {
 
 .formAcount {
     width: 700px;
-    height: 500px;
+    height: 460px;
     border-radius: 20px;
     position: absolute;
     top: 50%;
@@ -230,23 +314,22 @@ a {
     border: none;
     border-radius: 5px;
     margin: 25px 5px;
-    cursor: pointer;
+    cursor: default;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
 }
 
 .submitChangePaswordRetrour {
     width: 50%;
-    height: 30px;
-    font-size: 14px;
-    text-decoration: none;
-    padding: 7px 20px;
+    padding: 8px 20px;
     text-align: center;
     background-color: #fcc817;
     border: none;
     border-radius: 5px;
     position: relative;
     left: 40%;
-    bottom: 12px;
-    cursor: pointer;
+    bottom: 53px;
+    cursor: default;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
 }
 
 
@@ -406,5 +489,5 @@ a {
     height: 150px;
     margin: 10px 0 10px 50px;
     border: none;
-    border-radius: 50%;
+    border-radius: 25%;
 }
