--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -165,14 +165,15 @@ a {
 /*-------------- page inscription----------------------*/
 
 .containerRegister {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     position: relative;
     background: #fff;
     background-image: url(../img/sky.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    overflow: scroll;
 }
 
 .formcontainerregister {
@@ -234,6 +235,25 @@ a {
 }
 
 .retourRegister {
+    display: flex;
+}
+
+.retourRegister button {
+    width: 150px;
+    height: 30px;
+    margin: 20px 30px;
+    font-size: 12px;
+    text-decoration: none;
+    padding: 8px 50px;
+    text-align: center;
+    background-color: #fcc817;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+
+/* .retour {
     width: 20%;
     height: 30px;
     font-size: 12px;
@@ -243,11 +263,51 @@ a {
     background-color: #fcc817;
     border: none;
     border-radius: 5px;
-    position: relative;
-    bottom: 48px;
-    left: 200px;
-    cursor: default;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+} */
+
+@media screen and (max-width: 800px) {
+    .containerRegister {
+        overflow: hidden;
+    }
+    .formcontainerregister {
+        width: 100%;
+        height: 100vh;
+        overflow-y: scroll;
+    }
+    .formcontainerregister h1 {
+        width: 100%;
+        height: 12vw;
+        font-size: 5vw;
+    }
+    #register {
+        width: 100%;
+    }
+    .required {
+        font-size: 5vw;
+        margin-left: 5%;
+    }
+    .inputRegister {
+        width: 93%;
+        margin-left: 3%;
+        height: 8vw;
+    }
+    .submitRegister {
+        width: 95%;
+        height: 7vw;
+        font-size: 5vw;
+    }
+    .retourRegister {
+        flex-direction: column;
+        margin-top: 50px;
+    }
+    .retourRegister button {
+        width: 93vw;
+        height: 10vw;
+        font-size: 4vw;
+        margin-left: 3vw;
+        padding: 0;
+    }
 }
 
 
