--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -6,13 +6,24 @@
 <div class="containerRegister">
     <div class="formcontainerregister">
         <h1>inscription</h1>
-
-        {{ form(form) }}
+        {{ form_start(form) }}
         
+            {{ form_errors(form) }}
+            {{ form_row(form.speudo) }}
+            {{ form_row(form.Nom) }}
+            {{ form_row(form.Prenom) }}
+            {{ form_row(form.email) }}
+            {{ form_row(form.adress) }}
+            {{ form_row(form.telephone) }}
+            {{ form_row(form.password) }}
+            <div class="retourRegister">
+            {{ form_row(form.submit) }}
+           
             
-            <a href="{{ path('app_login')}}" class="retourRegister">Retour</a>
+            <button class="retour" href="{{ path('app_login')}}" >Retour</button>
+            </div>
 
-      
+        {{ form_end(form) }}  
     </div>
 
 </div>
