responcive changement de mot de passe

--- a/templates/security/acoutPassword.html.twig
+++ b/templates/security/acoutPassword.html.twig
@@ -12,8 +12,24 @@
             {{ notification }}
         </div>
         {% endif %}
-        {{ form(form) }}
-    <a class="submitChangePaswordRetrour" href="{{ path('chat')}}">Retourner sur le chat</a>
+        {{ form_start(form) }}
+        
+            {{ form_errors(form) }}
+            {{ form_row(form.speudo) }}
+            {{ form_row(form.old_password) }}
+            {{ form_row(form.new_password) }}
+          
+            <div class="bottumChat">
+                {{ form_row(form.submit) }}
+           
+                <div class="retourchat">
+                    
+                    <a class="submitChangePaswordRetrour" href="{{ path('chat')}}">Retourner sur le chat</a>
+                </div>
+            </div>
+
+        {{ form_end(form) }} 
+        
 
     </div>
  </div>
