--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -3,54 +3,57 @@
 {% block title %}chat {% endblock %}
 
 {% block body %}
- <div class="contenaireChat">
-    <div class="generalChat">
-    
-        <div class="containerPesudo">
-            <div class="heaiderSpeudo">
-                <h1>Salut {{ app.user.speudo }}</h1>
-                <div class="burgerSpeudo">
-                    <div class="burger">
-                        <div class="line line1"></div>
-                        <div class="line line2"></div>
-                        <div class="line line3"></div>
+    <div class="contenaireChat">
+        <div class="generalChat">
+        
+            <div class="containerPesudo">
+                <div class="heaiderSpeudo">
+                    <h1>Salut {{ app.user.speudo }}</h1>
+                    <div class="burgerSpeudo">
+                        <div class="burger">
+                            <div class="line line1"></div>
+                            <div class="line line2"></div>
+                            <div class="line line3"></div>
+                        </div>
+                        
                     </div>
                     
                 </div>
+                <div class="corpSpeudo">
                 
-            </div>
-            
-            <img class="speudoImg" src="https://www.beachamigos.fr/media/uploaded/sites/9202/actualite/5c84f689e908e_Pseudoetanonymat.png" alt="image du speudo">
-            <div class="login ">
-                        <a href="{{ path('register')}}">Modifier Vos informations</a>
-                        <a href="{{ path('acout_password')}}">Modifier le mot de passe</a>
-                        <a href="{{ path('app_logout')}}">Se déconecté</a>
+                    <img class="speudoImg" src="https://www.beachamigos.fr/media/uploaded/sites/9202/actualite/5c84f689e908e_Pseudoetanonymat.png" alt="image du speudo">
+                    <div class="info">
+                        
+                        <p class="nom">Afficher un nom<br><span>{{ app.user.nom }} {{ app.user.prenom }}</span></p>
+                        <p class="email">adresse e-mail<br>{{ app.user.email }}</p>
                     </div>
-            <div class="info">
-                
-                <p class="nom">Afficher un nom<br><span>{{ app.user.nom }} {{ app.user.prenom }}</span></p>
-                <p class="email">adresse e-mail<br>{{ app.user.email }}</p>
-            </div>
+                    <div class="login ">
+                                <a href="{{ path('acout_password')}}">Modifier Vos informations</a>
+                                <a href="{{ path('acout_password')}}">Modifier le mot de passe</a>
+                                <a href="{{ path('app_logout')}}">Se déconecté</a>
+                            </div>
+                    
 
-        </div>
-        <div class="containercorpChat">
-            <div class="containerGroupe">
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
+                </div>
             </div>
-            <div class="containerPerticipent">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae facilis ab atque sunt reprehenderit illum assumenda consequatur repellendus sed asperiores a eligendi placeat dolorum maxime est natus rerum nesciunt, molestias corrupti iusto distinctio quae esse quaerat inventore? Maiores et commodi culpa quasi exercitationem aliquam eius amet illo quo officiis enim obcaecati, cum hic dolore odit recusandae repudiandae quaerat odio suscipit totam blanditiis asperiores reprehenderit? Id esse quaerat itaque rerum obcaecati, veritatis accusantium nemo modi commodi minima blanditiis neque dolorum sunt labore ipsam laboriosam soluta perspiciatis impedit dolores minus voluptates non totam. Accusantium ut fugiat provident, debitis fugit reprehenderit culpa dicta!</p>
+            <div class="containercorpChat">
+                <div class="containerGroupe">
+                <p>lorem</p>
+                <p>lorem</p>
+                <p>lorem</p>
+                <p>lorem</p>
+                <p>lorem</p>
+                </div>
+                <div class="containerPerticipent">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae facilis ab atque sunt reprehenderit illum assumenda consequatur repellendus sed asperiores a eligendi placeat dolorum maxime est natus rerum nesciunt, molestias corrupti iusto distinctio quae esse quaerat inventore? Maiores et commodi culpa quasi exercitationem aliquam eius amet illo quo officiis enim obcaecati, cum hic dolore odit recusandae repudiandae quaerat odio suscipit totam blanditiis asperiores reprehenderit? Id esse quaerat itaque rerum obcaecati, veritatis accusantium nemo modi commodi minima blanditiis neque dolorum sunt labore ipsam laboriosam soluta perspiciatis impedit dolores minus voluptates non totam. Accusantium ut fugiat provident, debitis fugit reprehenderit culpa dicta!</p>
+                </div>
+                <div class="containerMessage">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae facilis ab atque sunt reprehenderit illum assumenda consequatur repellendus sed asperiores a eligendi placeat dolorum maxime est natus rerum nesciunt, molestias corrupti iusto distinctio quae esse quaerat inventore? Maiores et commodi culpa quasi exercitationem aliquam eius amet illo quo officiis enim obcaecati, cum hic dolore odit recusandae repudiandae quaerat odio suscipit totam blanditiis asperiores reprehenderit? Id esse quaerat itaque rerum obcaecati, veritatis accusantium nemo modi commodi minima blanditiis neque dolorum sunt labore ipsam laboriosam soluta perspiciatis impedit dolores minus voluptates non totam. Accusantium ut fugiat provident, debitis fugit reprehenderit culpa dicta!</p>
+                </div>
+            
             </div>
-            <div class="containerMessage">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae facilis ab atque sunt reprehenderit illum assumenda consequatur repellendus sed asperiores a eligendi placeat dolorum maxime est natus rerum nesciunt, molestias corrupti iusto distinctio quae esse quaerat inventore? Maiores et commodi culpa quasi exercitationem aliquam eius amet illo quo officiis enim obcaecati, cum hic dolore odit recusandae repudiandae quaerat odio suscipit totam blanditiis asperiores reprehenderit? Id esse quaerat itaque rerum obcaecati, veritatis accusantium nemo modi commodi minima blanditiis neque dolorum sunt labore ipsam laboriosam soluta perspiciatis impedit dolores minus voluptates non totam. Accusantium ut fugiat provident, debitis fugit reprehenderit culpa dicta!</p>
-            </div>
-        
         </div>
     </div>
- </div>
 
 
 {% endblock %}
