--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -466,6 +466,171 @@ a {
 }
 
 
+/*-------------- page modification information personelle----------------------*/
+
+.containerModificationRegister {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    background: #fff;
+    background-image: url(../img/sky.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow: scroll;
+}
+
+.formContainerModificationRegister {
+    width: 700px;
+    height: 600px;
+    border-radius: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 2px 2px 10px rgb(0, 0, 0);
+    overflow: hidden;
+    background-color: white;
+}
+
+.formContainerModificationRegister h1 {
+    width: 700px;
+    height: 60px;
+    text-align: center;
+    padding-top: 8px;
+    background-color: #87cefa;
+    font-size: 30px;
+    font-weight: bold;
+    color: #333;
+}
+
+#register {
+    margin: 0;
+    padding: 0 20px;
+    width: 700px;
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    overflow: initial;
+}
+
+.required {
+    display: inline-block;
+    margin: 6.5px 10px;
+    font-size: 18px;
+}
+
+.inputRegister {
+    width: 95%;
+    height: 30px;
+    border: none;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+    padding-left: 10px;
+    margin: 0 20px;
+}
+
+.submitRegister {
+    width: 20%;
+    height: 30px;
+    background-color: #fcc817;
+    border: none;
+    border-radius: 5px;
+    margin: 20px 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+.retourRegister {
+    display: flex;
+}
+
+.retourRegister button {
+    width: 150px;
+    height: 30px;
+    margin: 20px 30px;
+    font-size: 12px;
+    text-decoration: none;
+    padding: 8px 50px;
+    text-align: center;
+    background-color: #fcc817;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+.retour {
+    width: 20%;
+    height: 30px;
+    margin: 20px 30px;
+}
+
+.retour a {
+    width: 100%;
+    height: 100%;
+    font-size: 12px;
+    text-decoration: none;
+    padding: 8px 50px;
+    text-align: center;
+    background-color: #fcc817;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    cursor: default;
+}
+
+@media screen and (max-width: 800px) {
+    .containerModificationRegister {
+        overflow: hidden;
+    }
+    .formContainerModificationRegister {
+        width: 100%;
+        height: 100vh;
+        overflow-y: scroll;
+        border-radius: 0;
+    }
+    .formContainerModificationRegister h1 {
+        width: 100%;
+        height: 12vw;
+        font-size: 5vw;
+    }
+    #register {
+        width: 100%;
+    }
+    .formulaireLogin form div .required {
+        font-size: 5vw;
+        margin-left: 5%;
+    }
+    .inputRegister {
+        width: 93%;
+        margin-left: 3%;
+        height: 8vw;
+    }
+    .submitRegister {
+        width: 95%;
+        height: 7vw;
+        font-size: 5vw;
+    }
+    .retourRegister {
+        flex-direction: column;
+        margin-top: 50px;
+    }
+    .retourRegister button {
+        width: 90vw;
+        height: 10vw;
+        margin: 20px 25px;
+        font-size: 5vw;
+    }
+    .retour {
+        width: 90vw;
+        height: 10vw;
+        margin: 20px 25px;
+    }
+    .retour a {
+        font-size: 4vw;
+        padding: 3% 43%;
+    }
+}
+
+
 /*-------------- page chat----------------------*/
 
 .contenaireChat {
@@ -507,14 +672,27 @@ a {
     transition: opacity ease-in 1s;
 }
 
-.heaiderSpeudo h1 {
-    width: 100%;
-    height: 60px;
+.titreChat {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+}
+
+.titreChat h1 {
     padding-top: 8px;
     padding-left: 8px;
-    font-size: 30px;
-    font-weight: bold;
-    color: #333;
+    font-size: 17px;
+}
+
+.titreChat P {
+    padding-left: 8px;
+    font-size: 25px;
+    font-style: italic;
+    font-family: 'latoregular';
+}
+
+.burgerSpeudo {
+    width: 20%;
 }
 
 .burger {
