--- a/templates/acout_profil/index.html.twig
+++ b/templates/acout_profil/index.html.twig
@@ -15,6 +15,7 @@
             {{ form_row(form.email) }}
             {{ form_row(form.adress) }}
             {{ form_row(form.telephone) }}
+            {{ form_row(form.visible) }}
             
             <div class="retourRegister">
                 {{ form_row(form.submit) }}
