--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -16,6 +16,7 @@
             {{ form_row(form.adress) }}
             {{ form_row(form.telephone) }}
             {{ form_row(form.password) }}
+            {{ form_row(form.visible) }}
             <div class="retourRegister">
                 {{ form_row(form.submit) }}
            
