modification partie responsive de l'inscription et de la modif info perso

--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -9,8 +9,8 @@
             <div class="containerPesudo">
                 <div class="heaiderSpeudo">
                     <div class="titreChat">
-                    <h1>Salut et bienvenue</h1>
-                    <p>sur what chat </p>
+                    <h1>Salut et bienvenue sur</h1>
+                    <p>what chat </p>
                     </div>
                     <div class="burgerSpeudo">
                         <div class="burger">
@@ -56,17 +56,17 @@
             </div>
             <div class="containercorpChat">
                 <div class="containerGroupe">
-                <p>lorem</p>
-                <p>lorem</p>
-                <p>lorem</p>
-                <p>lorem</p>
-                <p>lorem</p>
+                    <p>lorem</p>
+                    <p>lorem</p>
+                    <p>lorem</p>
+                    <p>lorem</p>
+                    <p>lorem</p>
                 </div>
                 <div class="containerPerticipent">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae facilis </p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae facilis </p>
                 </div>
                 <div class="containerMessage">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae facilis ab atque sunt reprehenderit illum assumenda consequatur repellendus sed asperiores a eligendi placeat dolorum maxime est natus rerum nesciunt, molestias corrupti iusto distinctio quae esse quaerat inventore? Maiores et commodi culpa quasi exercitationem </p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae facilis ab atque sunt reprehenderit illum assumenda consequatur repellendus sed asperiores a eligendi placeat dolorum maxime est natus rerum nesciunt, molestias corrupti iusto distinctio quae esse quaerat inventore? Maiores et commodi culpa quasi exercitationem </p>
                 </div>
             
             </div>
