--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -210,9 +210,9 @@ a {
     overflow: initial;
 }
 
-.required {
+.formcontainerregister form div .required {
     display: inline-block;
-    margin: 6.5px 10px;
+    margin: 6.5px 30px;
     font-size: 18px;
 }
 
@@ -279,8 +279,7 @@ a {
 }
 
 .Labelcheckboxrequired {
-    margin: 0;
-    margin-top: 7px;
+    margin: 7px 0 0 0;
     padding: 0 5px;
     width: 700px;
     height: 20px;
@@ -288,9 +287,7 @@ a {
 }
 
 .checkboxrequired {
-    margin: 0;
-    margin-top: 7px;
-    margin-left: 20px;
+    margin: 7px 0 0 20px;
     width: 20px;
     height: 20px;
     cursor: pointer;
@@ -316,7 +313,7 @@ a {
     }
     .formulaireLogin form div .required {
         font-size: 5vw;
-        margin-left: 5%;
+        margin-left: 10%;
     }
     .inputRegister {
         width: 93%;
@@ -346,6 +343,23 @@ a {
     .retour a {
         font-size: 4vw;
         padding: 3% 43%;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .formcontainerregister form div .required {
+        margin: 6.5px 20px;
+    }
+    .inputRegister {
+        height: 12vw;
+    }
+    .Labelcheckboxrequired {
+        margin: 5vw 0 0 0;
+    }
+    .checkboxrequired {
+        margin: 0 0 0 20px;
+        width: 20vw;
+        height: 20vw;
     }
 }
 
@@ -544,7 +558,7 @@ a {
     font-size: 18px;
 }
 
-.inputRegister {
+.inputModif {
     width: 95%;
     height: 30px;
     border: none;
@@ -606,7 +620,7 @@ a {
     flex-direction: row-reverse;
 }
 
-.Labelcheckboxrequired {
+.LabelcheckboxModifProfil {
     margin: 0;
     margin-top: 7px;
     padding: 0 5px;
@@ -615,7 +629,7 @@ a {
     font-size: 15px;
 }
 
-.checkboxrequired {
+.checkboxModifProfil {
     margin: 0;
     margin-top: 7px;
     margin-left: 20px;
@@ -645,7 +659,7 @@ a {
         font-size: 5vw;
         margin-left: 5%;
     }
-    .inputRegister {
+    .inputModif {
         width: 93%;
         margin-left: 3%;
         height: 8vw;
@@ -673,6 +687,23 @@ a {
     .retour a {
         font-size: 4vw;
         padding: 3% 43%;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .formContainerModificationRegister form div .required {
+        margin: 6.5px 20px;
+    }
+    .inputModif {
+        height: 12vw;
+    }
+    .LabelcheckboxModifProfil {
+        margin: 5vw 0 0 0;
+    }
+    .checkboxModifProfil {
+        margin: 0 0 0 20px;
+        width: 20vw;
+        height: 20vw;
     }
 }
 
