--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -63,7 +63,13 @@
                     <p>lorem</p>
                 </div>
                 <div class="containerPerticipent">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae facilis </p>
+                    <div class="recherche">
+                        
+                    </div>
+                    <div class="amis">
+                    </div>
+                    <div class="messagePriver">
+                    </div>
                 </div>
                 <div class="containerMessage">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae facilis ab atque sunt reprehenderit illum assumenda consequatur repellendus sed asperiores a eligendi placeat dolorum maxime est natus rerum nesciunt, molestias corrupti iusto distinctio quae esse quaerat inventore? Maiores et commodi culpa quasi exercitationem </p>
