--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -969,9 +969,9 @@ a {
 }
 
 .containerGroupe {
-    width: 200px;
+    width: 250px;
     height: 100%;
-    background: #87cefa;
+    /* background: #87cefa; */
     box-shadow: 1px 1px 5px #000;
     margin-right: 5px;
 }
